# FortiTyper

./: LICENSE  pyproject.toml  requirements.txt
