[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
package = "fortityper"

[project]
name = "fortityper"
version = "0.0.1"
description = "A CLI tool for obtaining information about a Fortigate or Fortimanager device"
requires-python = ">=3.12"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer[all]>=0.12.3",
    "pyyaml>=6.0.1",
    "rich>=13.9.2",
    "python-dotenv>=1.0.0",
    "requests>=2.32.3",
    "pydantic>=2.9.2"
]

dynamic = ["readme"]

[project.optional-dependencies]
dev = ["black", "flake8", "ruff", "pydocstyle"]

[tool.setuptools]
packages = ["fortityper"]

[project.scripts]
weagle = "fortityper.main:app"

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }

[tool.ruff]
line-length = 120
# Enable Pyflakes `E` and `F` codes by default.
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = ["E501"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".idea",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = { }

[tool.ruff.isort]
known-third-party = ["typer", "python-dotenv"]